# ExperimentsWithVariant

./: CMakeLists.txt  ExperimentsWithVariant.bmarks  ExperimentsWithVariant.cbp  ExperimentsWithVariant.depend  ExperimentsWithVariant.layout  ExperimentsWithVariant_build_log.html  main.cpp
include/: variant_type.hpp  wrapped_uint.hpp  wuintvariant_varlist.hpp
src/: wuintvariant_varlist.cpp
